# Marko

./: README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/styles/: global.css  reset.css
src/components/: AppSidebar.vue  AppToolbar.vue  BlockEditor.vue  FileTreeNode.vue  MarkdownPreview.vue  SettingsPanel.vue
src/data/: sampleDocument.ts
src/services/: desktop.ts
src/types/: index.ts
src/utils/: editorBlocks.ts  markdown.ts  stats.ts
