[package]
name = "marko-desktop"
version = "0.1.0"
description = "Markdown desktop editor powered by Vue and Tauri"
authors = ["chain-code"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
walkdir = "2"
